Fixed full height cards. (1) add alignItems='stretch' (2) make height='100%' to Card (3) check there is no div around card that makes height='100%' obsolete

--- a/client/src/components/PlaybookDashboard/PlaybookDashboard.css
+++ b/client/src/components/PlaybookDashboard/PlaybookDashboard.css
@@ -17,5 +17,6 @@
 }
 
 .flex-item {
+    flex: 1;
     padding: 20px;
 }
